added some home page content

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,5 @@
 
 
 <p>Welcome to my home page</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique numquam eius laboriosam provident, dolorum illum, ipsa commodi, porro atque dolore quam obcaecati quia corrupti ducimus facilis culpa aspernatur! Sapiente, iusto!</p>
