--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 
 
-<p>Welcome to my home page</p>
+<p class="title">Welcome to my home page</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique numquam eius laboriosam provident, dolorum illum, ipsa commodi, porro atque dolore quam obcaecati quia corrupti ducimus facilis culpa aspernatur! Sapiente, iusto!</p>
