added styling, some additional routes and stimulus controllers to toggle forms

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,11 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "userform";
+@import "pages";
+@import "consultform";
+@import "appform";
+
+* {
+  box-sizing: border-box;
+}
