--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -1,3 +1,44 @@
-<h1>Welcome to the doctors</h1>
+<% name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
+<h1 class="title">Welcome Dr. <%= name %> </h1>
 
-<%= link_to "create new consultation", new_user_consultation_path%>
+<div id="consultations">
+  <h3 class="mt-4 consultation-list">Consultations</h3>
+  <table class="table table-striped table-bordered table-striped">
+    <thead>
+      <tr class="thead-dark">
+        <th>Title</th>
+        <th>Speciality</th>
+        <th>Experience(yrs)</th>
+        <th>Languages</th>
+        <th>Location</th>
+        <th>Availability</th>
+        <th>Price/hr</th>
+        <th>Duration(hrs)</th>
+        <th colspan="3"></th>
+      </tr>
+      <% @consultations.each do |consultation| %>
+        <tr>
+          <td><%= consultation.pretty_title %></td>
+          <td><%= consultation.speciality %></td>
+          <td><%= consultation.years_of_experience %></td>
+          <td><%= consultation.languages_spoken %></td>
+          <td><%= consultation.location_city %></td>
+          <td><%= consultation.availability %></td>
+          <td><%= consultation.price_per_hour %></td>
+          <td><%= consultation.duration %></td>
+          <td><%= link_to "Show", consultation, class: 'btn btn-primary' %></td>
+          <td><%=button_to "Delete", consultation, method: :delete, class: 'btn btn-danger'%></td>
+        </tr>
+      <% end %>
+    </thead>
+  </table>
+  <%# <><%= link_to "Add consultation", new_consultation_path, class: 'btn btn-primary' %>
+</div>
+
+<div data-controller="toggle">
+    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Add consultation </button>
+
+    <div class=" form-open" data-toggle-target="appForm">
+      <%= render "form" %>
+    </div>
+</div>
