--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,19 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'pages/header' %>
+    <br>
+    <% if notice && notice == 'no such patient exist' %>
+      <p class="notifications fail"><%= notice %></p>
+    <% elsif notice%>
+      <p class="notifications success"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p class="notifications success"><%= alert %></p>
+    <% end %>
+
+    <br>
 
     <%= yield %>
   </body>
