--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-
-<p class="title">Welcome to my home page</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique numquam eius laboriosam provident, dolorum illum, ipsa commodi, porro atque dolore quam obcaecati quia corrupti ducimus facilis culpa aspernatur! Sapiente, iusto!</p>
+<h1 class="home-title">Home</h1>
+<div class="home-div" data-controller="typed">
+  <%if current_user%>
+    <% name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
+    <h3 class="title">Welcome <%= name %> </h3>
+    <br>
+    <h3 class="title"
+    data-typed-strings-value="<%=['Welcome', current_user.first_name.capitalize, current_user.last_name.capitalize]%>"= ></h3>
+  <%else%>
+    <p class="title">Welcome to my home page</p>
+  <%end%>
+  <span data-typed-target="lorem"></span>
+</div>
