--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -33,7 +33,8 @@
         <th>Patient</th>
         <th>Email</th>
         <th>Status</th>
-        <th>Created at</th>
+        <th colspan="2">Created at</th>
+
       </tr>
       <% @appointments.each do |appointment|%>
         <% patien_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
