--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,3 +21,15 @@
   </div>
 
 <%end%>
+
+
+<% if user_signed_in?%>
+  <div data-controller="toggle">
+      <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> All consultations </button>
+
+      <div class=" form-open" data-toggle-target="appForm">
+        <%= render "consultations" %>
+      </div>
+  </div>
+
+<%end%>
