--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,10 +1,12 @@
 <h1>Consultation</h1>
+<% name = "#{ @consultation.user.first_name.capitalize} #{ @consultation.user.last_name.capitalize}"%>
 <div class="jumbotron">
   <h3 class="display-8">
-    <strong>Title: </strong><%= @consultation.pretty_title.capitalize %>
+    <strong>Name: </strong>Dr. <%= name %>
   </h3>
   <hr class="my-2">
   <p class="lead">
+    <strong>Title:</strong> <i><%= @consultation.pretty_title.capitalize %></i><br>
     <strong>Speciality:</strong> <i><%= @consultation.speciality %></i><br>
     <strong>Experience(yrs):</strong> <i><%= @consultation.years_of_experience %></i><br>
     <strong>Languages:</strong> <i><%= @consultation.languages_spoken %></i><br>
@@ -20,7 +22,11 @@
   <br>
   <div class="btns col-3 p-0">
     <%= link_to "Back", consultations_path, class: "btn btn-primary" %>
-    <%= button_to "Delete", @consultation, method: :delete, class: 'btn btn-danger'%>
+    <% if @consultation.user == current_user %>
+      <%= button_to "Delete", @consultation, method: :delete, class: 'btn btn-danger'%>
+    <% else %>
+      <%=button_to "Book Appointment", consultation_appointments_path(@consultation), method: :post, class: 'btn btn-success'%>
+    <% end %>
   </div>
 </div>
 
@@ -32,16 +38,19 @@
       <tr class="thead-dark">
         <th>Patient</th>
         <th>Email</th>
-        <th>Status</th>
+        <th>Dr</th>
+        <th>Dr email</th>
         <th colspan="2">Created at</th>
 
       </tr>
       <% @appointments.each do |appointment|%>
-        <% patien_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
+        <% patien_name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
+        <% dr_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
         <tr>
           <td><%= patien_name %></td>
+          <td><%= current_user.email %></td>
+          <td><%= dr_name %></td>
           <td><%= appointment.user.email %></td>
-          <td><%= appointment.status %></td>
           <td><%= appointment.created_at %></td>
           <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
         </tr>
@@ -50,10 +59,9 @@
   </table>
 </div>
 
-<div data-controller="toggle">
+<%# <div data-controller="toggle">
     <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Add appointment </button>
 
     <div class=" form-open" data-toggle-target="appForm">
-      <%= render "appointments/form" %>
     </div>
-</div>
+</div> %>
