--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -21,16 +21,22 @@
   <hr class="my-2">
   <br>
   <div class="btns col-3 p-0">
-    <%= link_to "Back", consultations_path, class: "btn btn-primary" %>
+    <% if user_signed_in? %>
+      <%= link_to "Back", consultations_path, class: "btn btn-primary" %>
+    <% else %>
+      <%= link_to "Home", root_path, class: "btn btn-primary" %>
+    <% end %>
     <% if @consultation.user == current_user %>
       <%= button_to "Delete", @consultation, method: :delete, class: 'btn btn-danger'%>
     <% else %>
-      <%=button_to "Book Appointment", consultation_appointments_path(@consultation), method: :post, class: 'btn btn-success'%>
+      <% if user_signed_in? %>
+        <%=button_to "Book Appointment", consultation_appointments_path(@consultation), method: :post, class: 'btn btn-success'%>
+      <% end %>
     <% end %>
   </div>
 </div>
 
-
+<% if user_signed_in? %>
 <div id="appointments">
   <h3 class="mt-4 appointment-list">Appointments</h3>
   <table class="table table-striped table-bordered table-striped">
@@ -58,7 +64,7 @@
     </thead>
   </table>
 </div>
-
+<% end %>
 <%# <div data-controller="toggle">
     <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Add appointment </button>
 
