--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -36,54 +36,29 @@
   </div>
 </div>
 
-<% if user_signed_in? && @consultation.user == current_user %>
-  <%appointments = @consultation.appointments %>
 <div id="appointments">
-  <h3 class="mt-4 appointment-list">Patients</h3>
+  <h3 class="mt-4 appointment-list">Appointments</h3>
   <table class="table table-striped table-bordered table-striped">
     <thead>
       <tr class="thead-dark">
         <th>Patient</th>
         <th>Email</th>
+        <th>Dr.</th>
+        <th>Dr. email</th>
         <th colspan="2">Created at</th>
-
       </tr>
-        <% appointments.each do |appointment|%>
-          <% id = appointment.user_id
-          patient = User.find(id) %>
-          <% patien_name = "#{patient.first_name.capitalize} #{patient.last_name.capitalize}"%>
-          <tr>
-            <td><%= patien_name %></td>
-            <td><%= appointment.user.email %></td>
-            <td><%= appointment.created_at %></td>
-            <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
-          </tr>
-        <% end %>
+      <% @appointments.each do |appointment|%>
+        <% patien_name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
+        <% dr_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
+        <tr>
+          <td><%= patien_name %></td>
+          <td><%= current_user.email %></td>
+          <td><%= dr_name %></td>
+          <td><%= appointment.user.email %></td>
+          <td><%= appointment.created_at %></td>
+          <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
+        </tr>
+      <% end %>
     </thead>
   </table>
 </div>
-<br>
-<% else %>
-<% @appointments = current_user.appointments%>
-<div id="appointments">
-  <h3 class="mt-4 appointment-list">Doctors</h3>
-  <table class="table table-striped table-bordered table-striped">
-    <thead>
-      <tr class="thead-dark">
-        <th>Dr</th>
-        <th>Email</th>
-        <th colspan="2">Created at</th>
-
-      </tr>
-        <% @appointments.each do |appointment|%>
-          <tr>
-            <td><%= name %></td>
-            <td><%= @consultation.user.email %></td>
-            <td><%= appointment.created_at %></td>
-            <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
-          </tr>
-        <% end %>
-    </thead>
-  </table>
-</div>
-<% end %>
