--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -9,7 +9,7 @@
 
       <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'My consultations', consultations_path, class:'nav-link'%>
+            <%= link_to 'Dashboard', consultations_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
             <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
