--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,6 @@
 
 <%end%>
 
-
   <div data-controller="toggle">
       <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> All consultations </button>
 
@@ -30,3 +29,9 @@
         <%= render "consultations" %>
       </div>
   </div>
+<div>
+  <div class="profile">
+    <h4>image</h4>
+    <%= cl_image_tag current_user.profile_photo.key %>
+  </div>
+</div>
