the user can now upload their image and each consultation as its own image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,6 +32,6 @@
 <div>
   <div class="profile">
     <h4>image</h4>
-    <%= cl_image_tag current_user.profile_photo.key %>
+    <%= cl_image_tag @user.profile_photo.key %>
   </div>
 </div>
