--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,44 @@
 // Specific CSS for your home-page
+h1 {
+  color: #2A6382;
+  font-weight: 200;
+}
+
+p {
+  color: #2A6382;
+  font-size: xx-large;
+}
+
+body {
+  background-color: white;
+  font-family: var(--bs-body-font-family);;;
+}
+
+.btn {
+  color: white;
+  background-color: #2A6382;
+  outline: #4190B7;
+  align-items: center;
+}
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  height: 1000px;
+  padding: 50px 0;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
