appointment styling, turning appointmrnt table into  appointment cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     <h3 style="color: blue;" data-typed-target="display" class="title"></h3>
     <br>
   <%else%>
-    <p class="title">Welcome to my home page</p>
+    <p class="title">Welcome to AirDoc</p>
   <%end%>
   <span data-typed-target="lorem"></span>
 </div>
