--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,10 @@ h1 {
   font-weight: 200;
 }
 
+.container h1 {
+  font-size: 400px;
+}
+
 p {
   color: #2A6382;
   font-size: xx-large;
@@ -41,4 +45,56 @@ body {
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+button {
+  color: #D9EDEF;
+  background-color: #2A6382;
+  border-radius: 20%;
+  border: 2px solid #4190B7;
+  margin: 2px;
+
+}
+
+
+.left{
+  width: 60%;
+}
+button {
+  margin-top: 75px;
+  background: #4190B7;
+  border-radius: 999px;
+  box-shadow: #4190B7 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+}
+
+.motto{
+  border: 2px solid red;
+
+
+}
+
+.sub-heading{
+  border: 2px solid red;
+}
+
+.title {
+  color: #D9EDEF;
+  font-size: 160px;
+  border: 2px solid red;
 }
