--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,18 +18,21 @@ body {
   font-family: var(--bs-body-font-family);;;
 }
 
-.btn {
-  color: white;
-  background-color: #2A6382;
-  outline: #4190B7;
-  align-items: center;
-}
+// .btn {
+//   color: white;
+//   background-color: #2A6382;
+//   outline: #4190B7;
+//   align-items: center;
+// }
 
 .banner {
   background-size: cover;
   background-position: center;
-  height: 1000px;
+  height: 95vh;
   padding: 50px 0;
+  display: flex;
+  align-items: center;
+
 }
 
 .banner h1 {
@@ -47,21 +50,26 @@ body {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-button {
-  color: #D9EDEF;
-  background-color: #2A6382;
-  border-radius: 20%;
-  border: 2px solid #4190B7;
-  margin: 2px;
+// button {
+//   color: #D9EDEF;
+//   background-color: #2A6382;
+//   border-radius: 20%;
+//   border: 2px solid #4190B7;
+//   margin: 2px;
+
+// }
+
+.heromain{
+  width: 80%;
+  margin-left: 100px;
+
 
 }
 
 
-.left{
-  width: 60%;
-}
-button {
-  margin-top: 75px;
+
+button, .btn {
+
   background: #4190B7;
   border-radius: 999px;
   box-shadow: #4190B7 0 10px 20px -10px;
@@ -83,18 +91,69 @@ button {
   border: 0;
 }
 
+.consults {
+  margin-top: 30px;
+}
+
 .motto{
-  border: 2px solid red;
-
-
+  font-size: 20px;
+  margin-bottom: 35px;
 }
 
 .sub-heading{
-  border: 2px solid red;
+  font-size: 20px;
+  margin-top: -50px;
+  color: white;
+  width: 65%;
 }
 
 .title {
   color: #D9EDEF;
-  font-size: 160px;
-  border: 2px solid red;
+  font-size: 180px;
+  margin-top: -80px;
+}
+
+// .card-product {
+//   overflow: hidden;
+//   height: 120px;
+//   background: white;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: inherit;
+//   margin-top: 20px;
+//   border-radius: 10px;
+
+
+// }
+
+.stats  {
+  margin-top: 60px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: -81px;
+
+}
+
+.stats h1 {
+  color: #D9EDEF;
+
+}
+
+.stats p{
+  color: #D9EDEF;
+
+}
+.stat-1,.stat-2,.stat-3 {
+  flex-grow: 1;
+  text-align: center;
+}
+
+.stat-1, .stat-2 {
+  border-right: 2px solid lightgrey;
+
+
 }
