--- a/app/views/consultations/new.html.erb
+++ b/app/views/consultations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form-div">
-  <h2>Book a consultation</h2>
+  <h2>Create a consultation</h2>
 
     <%= simple_form_for @consultation do |f|%>
       <div class="consultform">
