changed confirmation title

--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Consultation</h1>
+<h1>Consultation Confirmation</h1>
 <% name = "#{ @consultation.user.first_name.capitalize} #{ @consultation.user.last_name.capitalize}"%>
 <div class="jumbotron">
   <h3 class="display-8">
