--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -2,12 +2,26 @@
 
 <div data-controller="typed2">
   <% name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
-  <h1 data-typed2-target="drMessage" style="display: none;"  class="title">Welcome Dr. <%= name %> </h1>
-  <h1 style="color: blue;" data-typed2-target="drDisplay" class="title"></h1>
+  <%# <h1 data-typed2-target="drMessage" style="display: none;"  class="title">Welcome Dr. <%= name %>
+  <%if user_signed_in? && current_user %>
+    <h1>Welcome Dr.<%= name %></h1>
+  <%else%>
+    <h1>Welcome Guest!</h1>
+  <%end%>
+
+
+
+  <h1 style="color: blue;" data-typed2-target="drDisplay" class="title"> </h1>
 </div>
 
-<div id="consultations">
-  <h3 class="mt-4 consultation-list">Consultations</h3>
+
+
+<div id="consultations" style="margin-top: 65px;">
+
+  <h3 class="consultation-list">Available Consultations</h3>
+  <%# <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
+
+
   <table class="table table-striped table-bordered table-striped">
     <thead>
       <tr class="thead-dark">
