font on Available consultations title changed

--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -18,7 +18,7 @@
 
 <div id="consultations" style="margin-top: 65px;">
 
-  <h3 class="consultation-list">Available Consultations</h3>
+  <h3 class="consultation-list" style="font-family: var(--bs-body-font-family); font-weight:normal;">Available Consultations</h3>
   <%# <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
 
 
