add consults to create consults button changed

--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -55,7 +55,7 @@
 </div>
 
 <div data-controller="toggle">
-    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Add consultation </button>
+    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Create consultation </button>
 
     <div class=" form-open" data-toggle-target="appForm">
       <%= render "form" %>
