--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -14,8 +14,7 @@
             <%= link_to 'Consultations', consultations_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
-
-            <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
+            <%= link_to 'Appointments', appointments_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
             <%= link_to 'Edit Profile', edit_user_registration_path, class:'nav-link'%>
