--- a/app/views/pages/_appointments.html.erb
+++ b/app/views/pages/_appointments.html.erb
@@ -1,9 +1,9 @@
 <%# <img src="../app/assets/images/side-view-doctor-holding-stethoscope.jpg"/> %>
 
- <%# <%= image_tag 'side-view-doctor-holding-stethoscope.jpg', class: 'hero-img' %>
+<%= image_tag 'side-view-doctor-holding-stethoscope.jpg', class: 'hero-img', style: "width: 100%;" %>
 
 <div id="appointments">
-  <h3 class="mt-4  appointment-list">View Your Appointments</h3>
+  <h3 class="mt-4  appointment-list" style="">View Your Appointments</h3>
   <table class="table table-striped table-bordered table-striped">
     <thead>
 
