--- a/app/views/pages/_appointments.html.erb
+++ b/app/views/pages/_appointments.html.erb
@@ -4,6 +4,8 @@
 
 <div id="appointments">
   <h3 class="mt-4  appointment-list" style="">View Your Appointments</h3>
+
+
   <table class="table table-striped table-bordered table-striped">
     <thead>
 
@@ -23,7 +25,7 @@
       <% @appointments.each do |appointment|%>
         <% patien_name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
         <% dr_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
-        <tr>
+          <tr>
           <td><%= patien_name %></td>
           <td><%= current_user.email %></td>
           <td><%= dr_name %></td>
@@ -32,6 +34,9 @@
           <td><%= appointment.created_at %></td>
           <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
         </tr>
+
+
+        <div>Hi</div>
 
 
         <div class="card-product justify-content-between mt-3">
