--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
 
         <div data-controller="toggle">
-            <button data-action="click->toggle#fire" class="button consults" role="button"> Check consultations </button>
+            <button data-action="click->toggle#fire" class="landing-btn" role="button"> Check consultations </button>
               <div class=" form-open" data-toggle-target="appForm"></div>
         </div>
 
