--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -1,66 +1,33 @@
-<div id="consultations">
+<h3 class="appointment-list" style="font-family: var(--bs-body-font-family); font-weight: normal;"> Available Consultations</h3>
 
-  <h3 class="consultation-list" style="font-family: var(--bs-body-font-family); font-weight: normal;"> Available Consultations</h3>
+<div class="container">
 
-      <% @consultations.each do |consultation|%>
-        <% name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
-
-        <div class="consult-card">
-          <div class="consult-info">
-          <div class="user-info">
-            <%= image_tag 'appointment_pic.png', class: "cons-icon" %>
-            <div class="info">
-              <h4>Title: <%= consultation.pretty_title%></h4>
-              <span>Speciality: <%= consultation.speciality %></span>
-              <span>Experience(Yrs): <%= consultation.years_of_experience %></span>
-              <span>Languages: <%= consultation.languages_spoken%></span>
-              <span>Location: <%= consultation.location_city %></span>
-              <span>Availability: <%= consultation.availability%></span>
-              <span>Price/hr: <%= consultation.price_per_hour %></span>
-              <span>Duration(mins): <%= consultation.duration %></span>
-              </div>
-            </div>
-
-              <div class="con-buttons" >
-                <% if consultation.user == current_user %>
-                <%# <%=button_to "Delete", consultation, method: :delete, class: 'float-end'%>
-                  <%=link_to consultation_path(consultation), data: { turbo_method: :delete }, class: 'float-end' do %>
-                    <i class="fa-solid fa-x"></i>
-                  <% end %>
-                <% end %>
-                  <%=link_to "View", consultation_path(consultation), class: 'float-end'%>
-              </div>
-            </div>
-          </div>
-        <% end %>
-
-  <%# <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
-  <%# <><%= link_to "Add consultation", new_consultation_path, class: 'btn btn-primary' %>
-</div>
-
-<div data-controller="toggle">
-    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Create consultation </button>
-
-    <div class=" form-open" data-toggle-target="appForm">
-      <%= render "form" %>
-    </div>
-</div>
-
-
-# card product
 <div class="cards">
   <% @consultations.each do |consultation|%>
-    <%=link_to consultation_path(consultation) do %>
-      <div class="card-product">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <% name = "#{consultation.user.first_name.capitalize} #{consultation.user.last_name.capitalize}"%>
+    <%=link_to consultation_path(consultation), class: "text-decoration-none" do %>
+      <div class="card-product position-relative" >
+        <img src="https://images.unsplash.com/photo-1584820927498-cfe5211fd8bf?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
         <div class="card-product-infos">
-          <h2><%= consultation.pretty_title %></h2>
-          <p><%= consultation.speciality %></p>
-          <p><%= consultation.years_of_experience %></p>
-          <p><%= consultation.location_city %></p>
-          <p><%= consultation.price_per_hour %></p>
+          <h2 style="color: black; font-size: 24px">Dr. <%=name%></h2>
+          <p>Bio: <%= consultation.pretty_title %></p>
+          <p>Speciality: <%= consultation.speciality %></p>
+          <p>Experience: <%= consultation.years_of_experience %> Years</p>
+          <p>location: <%= consultation.location_city %></p>
+          <span style="position: absolute; bottom: 16px; right: 16px; font-weight: bold; color: #4190B7;">£<%= consultation.price_per_hour %>/hour</span>
         </div>
       </div>
     <% end %>
   <% end %>
+</div>
+
+</div>
+
+
+<div data-controller="toggle">
+    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mt-5"> Create consultation </button>
+
+    <div class=" form-open" data-toggle-target="appForm">
+      <%= render "form" %>
+    </div>
 </div>
