--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -25,7 +25,7 @@
   <% end %>
   <br>
   <hr>
-  <div class="btns col-3 p-0">
+  <div class="btns p-0">
     <% if user_signed_in? %>
       <%= link_to "Back", consultations_path, class: "btn btn-primary" %>
     <% else %>
@@ -40,6 +40,3 @@
     <% end %>
   </div>
 </div>
-
-
-
