--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Consultation</h1>
+<h1>Consultation Confirmation</h1>
 <% name = "#{ @consultation.user.first_name.capitalize} #{ @consultation.user.last_name.capitalize}"%>
 <div class="jumbotron">
   <h3 class="display-8">
@@ -19,55 +19,6 @@
   <br>
   <strong>Created at:</strong> <i><%= @consultation.created_at %></i>
   <hr class="my-2">
-  <br>
-  <div class="btns col-3 p-0">
-    <% if user_signed_in? %>
-      <%= link_to "Back", consultations_path, class: "btn btn-primary" %>
-    <% else %>
-      <%= link_to "Home", root_path, class: "btn btn-primary" %>
-    <% end %>
-    <% if @consultation.user == current_user %>
-      <%= button_to "Delete", @consultation, method: :delete, class: 'btn btn-danger'%>
-    <% else %>
-      <% if user_signed_in? %>
-        <%=button_to "Book Appointment", consultation_appointments_path(@consultation), method: :post, class: 'btn btn-success'%>
-      <% end %>
-    <% end %>
-  </div>
+  <h4>images</h4>
+
 </div>
-
-<% if user_signed_in? %>
-<div id="appointments">
-  <h3 class="mt-4 appointment-list">Appointments</h3>
-  <table class="table table-striped table-bordered table-striped">
-    <thead>
-      <tr class="thead-dark">
-        <th>Patient</th>
-        <th>Email</th>
-        <th>Dr</th>
-        <th>Dr email</th>
-        <th colspan="2">Created at</th>
-
-      </tr>
-      <% @appointments.each do |appointment|%>
-        <% patien_name = "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize}"%>
-        <% dr_name = "#{appointment.user.first_name.capitalize} #{appointment.user.last_name.capitalize}"%>
-        <tr>
-          <td><%= patien_name %></td>
-          <td><%= current_user.email %></td>
-          <td><%= dr_name %></td>
-          <td><%= appointment.user.email %></td>
-          <td><%= appointment.created_at %></td>
-          <td><%=link_to 'delete', appointment_path(appointment), data: { turbo_method: :delete }, class: 'btn btn-danger'%></td>
-        </tr>
-      <% end %>
-    </thead>
-  </table>
-</div>
-<% end %>
-<%# <div data-controller="toggle">
-    <button data-action="click->toggle#fire" class="btn btn-success mx-5 mb-5"> Add appointment </button>
-
-    <div class=" form-open" data-toggle-target="appForm">
-    </div>
-</div> %>
