--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Airdoc</title>
+    <title>AirDoc</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag "components/consultation-card", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+
+
+
+
     <%= render 'pages/header' %>
-    <br>
+
     <% if notice && notice == 'no such patient exist' %>
       <p class="notifications fail"><%= notice %></p>
     <% elsif notice%>
@@ -23,7 +28,6 @@
       <p class="notifications success"><%= alert %></p>
     <% end %>
 
-    <br>
 
     <%= yield %>
   </body>
