--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <%= link_to 'Home', root_path, class:'mx-4 navbar-brand'%>
+<nav class="navbar navbar-expand-lg">
+  <%= link_to root_path, class: 'mx-4 navbar-brand' do %>
+  <%= image_tag 'airdoc-logo-2.jpg'%>
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,10 +11,10 @@
 
       <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'My consultations', consultations_path, class:'nav-link'%>
+            <%= link_to 'Consultations', consultations_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
-            <%= link_to 'Add consultation', new_consultation_path, class:'nav-link'%>
+            <%= link_to 'Appointments', appointments_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
             <%= link_to 'Edit Profile', edit_user_registration_path, class:'nav-link'%>
@@ -22,7 +24,7 @@
           </li>
       <% else %>
           <li class="nav-item">
-            <%= link_to 'All Consultation', new_user_registration_path, class:'nav-link'%>
+            <%= link_to 'All Consultations', new_user_registration_path, class:'nav-link'%>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign Up', new_user_registration_path, class:'nav-link'%>
